--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "dependencies": {
-    "@repo/typescript-config": "workspace:*"
+    "@repo/typescript-config": "workspace:*",
+    "@types/express": "^5.0.3",
+    "express": "^5.1.0"
   },
   "scripts": {
-    "start": "node ./dist/index.ts",
+    "start": "node ./dist/index.js",
     "build": "tsc -b",
-    "dev": "npm run build  && npm run start"
+    "dev": "npm run build && npm run start"
   }
 }
