--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -12,8 +12,8 @@
     "express": "^5.1.0"
   },
   "scripts": {
-    "start": "node ./dist/index.ts",
+    "start": "node ./dist/index.js",
     "build": "tsc -b",
-    "dev": "npm run build  && npm run start"
+    "dev": "npm run build && npm run start"
   }
 }
