--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -25,6 +25,6 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4",
-    "@repo/ui": "*"
+    "@repo/ui": "workspace:*"
   }
 }
