--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "@repo/typescript-config": "workspace:*",
     "@types/express": "^5.0.3",
-    "express": "^5.1.0"
+    "@types/jsonwebtoken": "^9.0.10",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "scripts": {
     "start": "node ./dist/index.js",
