--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -9,11 +9,20 @@
   "dependencies": {
     "@repo/typescript-config": "workspace:*",
     "@types/express": "^5.0.3",
-    "express": "^5.1.0"
+    "@types/jsonwebtoken": "^9.0.10",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "ws": "^8.18.0"
   },
   "scripts": {
     "start": "node ./dist/index.js",
     "build": "tsc -b",
     "dev": "npm run build && npm run start"
+  },
+  "devDependencies": {
+    "@types/node": "^20.0.0",
+    "@types/ws": "^8.5.12",
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3"
   }
 }
