--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -1,21 +1,27 @@
+
 {
   "name": "http-backend",
   "version": "1.0.0",
   "description": "",
-  "license": "ISC",
-  "author": "",
-  "type": "module",
   "main": "index.js",
+  "scripts": {
+    "dev": "tsx src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@repo/typescript-config": "workspace:*",
-    "@types/express": "^5.0.3",
-    "@types/jsonwebtoken": "^9.0.10",
-    "express": "^5.1.0",
+    "@repo/backend-common": "workspace:*",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2"
   },
-  "scripts": {
-    "start": "node ./dist/index.js",
-    "build": "tsc -b",
-    "dev": "npm run build && npm run start"
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.3",
+    "@types/node": "^20.0.0",
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3"
   }
 }
