--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -2,26 +2,24 @@
   "name": "ws-backend",
   "version": "1.0.0",
   "description": "",
-  "license": "ISC",
-  "author": "",
-  "type": "commonjs",
   "main": "index.js",
-  "dependencies": {
-    "@repo/typescript-config": "workspace:*",
-    "@types/express": "^5.0.3",
-    "@types/jsonwebtoken": "^9.0.10",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "ws": "^8.18.0"
-  },
   "scripts": {
-    "start": "node ./dist/index.js",
-    "build": "tsc -b",
-    "dev": "npm run build && npm run start"
+    "dev": "tsx src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@repo/backend-common": "workspace:*",
+    "ws": "^8.18.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
     "@types/ws": "^8.5.12",
+    "@types/node": "^20.0.0",
+    "@types/jsonwebtoken": "^9.0.3",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3"
   }
