--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -12,8 +12,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@repo/backend-common": "workspace:*",
+  "dependencies": {    
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2"
   },
@@ -22,6 +21,8 @@
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.0.0",
     "tsx": "^4.19.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "@repo/backend-common": "workspace:*",
+    "@repo/common":"workspace:*"
   }
 }
