--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -1,14 +1,19 @@
 {
   "name": "@repo/typescript-config",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "license": "MIT",
+  "main": "base.json",
   "publishConfig": {
     "access": "public"
   },
   "exports": {
+    ".": "./base.json",
     "./base.json": "./base.json",
     "./nextjs.json": "./nextjs.json",
     "./react-library.json": "./react-library.json"
-  }
+  },
+  "files": [
+    "*.json"
+  ]
 }
