--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "tsx src/index.ts",
     "build": "tsc",
@@ -12,14 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ws": "^8.14.2",
+    "jsonwebtoken": "^9.0.2",
     "@repo/backend-common": "workspace:*",
-    "ws": "^8.18.0",
-    "jsonwebtoken": "^9.0.2"
+    "@repo/db": "workspace:*"
   },
   "devDependencies": {
-    "@types/ws": "^8.5.12",
-    "@types/node": "^20.0.0",
+    "@types/ws": "^8.5.7",
     "@types/jsonwebtoken": "^9.0.3",
+    "@types/node": "^20.0.0",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3"
   }
