--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -2,11 +2,15 @@
   "name": "@repo/db",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "exports": {
+    ".": {
+      "types": "./src/index.ts",
+      "default": "./src/index.ts"
+    },
     "./client": {
       "types": "./src/index.ts",
       "default": "./src/index.ts"
