--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "tsx src/index.ts",
+    "dev": "nodemon",
     "build": "tsc",
     "start": "node dist/index.js"
   },
@@ -23,6 +23,7 @@
     "@types/node": "^20.0.0",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
+    "nodemon": "^3.0.2",
     "@repo/backend-common": "workspace:*",
     "@repo/common":"workspace:*",
     "@repo/db": "workspace:*"
