--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "http-backend",
   "version": "1.0.0",
@@ -13,19 +12,22 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {    
+  "dependencies": {
+    "@types/cors": "^2.8.19",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@repo/backend-common": "workspace:*",
+    "@repo/common": "workspace:*",
+    "@repo/db": "workspace:*",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.0.0",
-    "tsx": "^4.19.2",
-    "typescript": "^5.6.3",
     "nodemon": "^3.0.2",
-    "@repo/backend-common": "workspace:*",
-    "@repo/common":"workspace:*",
-    "@repo/db": "workspace:*"
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3"
   }
 }
