--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -13,17 +13,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ws": "^8.14.2",
-    "jsonwebtoken": "^9.0.2",
     "@repo/backend-common": "workspace:*",
-    "@repo/db": "workspace:*"
+    "@repo/db": "workspace:*",
+    "dotenv": "^17.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
-    "@types/ws": "^8.5.7",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.0.0",
+    "@types/ws": "^8.5.7",
+    "nodemon": "^3.0.2",
     "tsx": "^4.19.2",
-    "typescript": "^5.6.3",
-    "nodemon": "^3.0.2"
+    "typescript": "^5.6.3"
   }
 }
