--- a/apps/http-backend/tsconfig.json
+++ b/apps/http-backend/tsconfig.json
@@ -2,7 +2,13 @@
     "extends": "../../packages/typescript-config/base.json",
     "compilerOptions": {
         "rootDir": "./src",
-        "outDir": "./dist",
-        "moduleResolution": "bundler"
-    }
+        "outDir": "./dist"
+    },
+    "include": [
+        "src/**/*"
+    ],
+    "exclude": [
+        "node_modules",
+        "dist"
+    ]
 }
