--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -2,22 +2,21 @@
   "name": "@repo/common",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/types.js",
+  "types": "dist/types.d.ts",
   "scripts": {
+    "build": "tsc",
+    "dev": "tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "exports":{
     ".": {
-      "types": "./src/types.ts",
-      "default": "./src/types.ts"
+      "types": "./dist/types.d.ts",
+      "default": "./dist/types.js"
     },
     "./types": {
-      "types": "./src/types.ts",
-      "default": "./src/types.ts"
-    },
-    "./src/types": {
-      "types": "./src/types.ts",
-      "default": "./src/types.ts"
+      "types": "./dist/types.d.ts",
+      "default": "./dist/types.js"
     }
   },
   "keywords": [],
@@ -28,6 +27,7 @@
     "zod": "^4.0.5"
   },
   "devDependencies": {
-    "@repo/typescript-config": "workspace:*"
+    "@repo/typescript-config": "workspace:*",
+    "typescript": "^5.6.3"
   }
 }
