--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -1,11 +1,17 @@
 {
     "extends": "@repo/typescript-config/base.json",
     "compilerOptions": {
+        "outDir": "./dist",
+        "rootDir": "./src",
+        "declaration": true,
+        "declarationMap": true,
         "baseUrl": ".",
         "paths": {
             "@repo/typescript-config/*": [
                 "node_modules/@repo/typescript-config/*"
             ]
         }
-    }
+    },
+    "include": ["src/**/*"],
+    "exclude": ["node_modules", "dist"]
 }
