--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -12,6 +12,11 @@
             ]
         }
     },
-    "include": ["src/**/*"],
-    "exclude": ["node_modules", "dist"]
+    "include": [
+        "src/**/*"
+    ],
+    "exclude": [
+        "node_modules",
+        "dist"
+    ]
 }
