--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -2,18 +2,21 @@
   "name": "@repo/db",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
+    "build": "tsc",
+    "dev": "tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "exports": {
     ".": {
-      "types": "./src/index.ts",
-      "default": "./src/index.ts"
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
     },
     "./client": {
-      "types": "./src/index.ts",
-      "default": "./src/index.ts"
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
     }
   },
   "keywords": [],
@@ -24,5 +27,8 @@
     "@prisma/client": "6.12.0",
     "@repo/typescript-config": "workspace:*",
     "prisma": "^6.12.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.6.3"
   }
 }
