feat: update TypeScript configuration and lockfile to version 5.8.3

--- a/apps/http-backend/tsconfig.json
+++ b/apps/http-backend/tsconfig.json
@@ -2,7 +2,8 @@
     "extends": "../../packages/typescript-config/base.json",
     "compilerOptions": {
         "rootDir": "./src",
-        "outDir": "./dist"
+        "outDir": "./dist",
+        "moduleResolution": "bundler"
     },
     "include": [
         "src/**/*"
