--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 node_modules
 .pnp
 .pnp.js
+.pnpm-store
 
 # Local env files
 .env
@@ -11,12 +12,18 @@ node_modules
 .env.development.local
 .env.test.local
 .env.production.local
+.env*.local
 
 # Testing
 coverage
+*.test.js.snap
+.jest
+test-results/
+playwright-report/
 
 # Turbo
 .turbo
+turbo.log
 
 # Vercel
 .vercel
@@ -26,19 +33,56 @@ coverage
 out/
 build
 dist
-
+*.tsbuildinfo
 
 # Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 # Misc
 .DS_Store
 *.pem
+*.key
+*.cert
+.vscode/settings.json
+.idea/
 
 # Development logs
 dev.log
+*.log
 
 # PM2 ecosystem config (local paths)
 ecosystem.config.js
+.pm2/
+
+# OS
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
+.temp/
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Prisma
+prisma/.env
+*.db
+*.db-journal
+
+# Package manager lock files (keep pnpm-lock.yaml)
+package-lock.json
+yarn.lock
+
