--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -6,6 +6,11 @@
         "declaration": true,
         "declarationMap": true
     },
-    "include": ["src/**/*"],
-    "exclude": ["node_modules", "dist"]
+    "include": [
+        "src/**/*"
+    ],
+    "exclude": [
+        "node_modules",
+        "dist"
+    ]
 }
