--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "devDependencies": {
     "prettier": "^3.6.2",
-    "turbo": "^2.5.4",
     "typescript": "5.8.3"
+  },
+  "dependencies": {
+    "turbo": "^2.2.3"
   },
   "packageManager": "pnpm@9.0.0",
   "engines": {
