--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
   "name": "sketchxpad",
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
-  },
-  "devDependencies": {
-    "prettier": "^3.6.2",
-    "typescript": "5.8.3"
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "dependencies": {
     "turbo": "^2.2.3"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3"
   },
   "packageManager": "pnpm@9.0.0",
   "engines": {
