Refactor  Kubernetes configurations for backend and frontend services .

--- a/apps/ws-backend/Dockerfile
+++ b/apps/ws-backend/Dockerfile
@@ -1,30 +1,24 @@
-FROM node:20-alpine AS base
+FROM node:20-alpine 
 WORKDIR /app
+
 RUN npm install -g pnpm turbo
 
+COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
+COPY turbo.json ./
 
-FROM base AS pruner
-COPY . .
-RUN turbo prune --scope=ws-backend --docker
+COPY packages ./packages
+COPY apps/ws-backend  ./apps/ws-backend
 
-FROM base AS installer
-COPY --from=pruner /app/out/json/ .
-COPY --from=pruner /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
+
 RUN pnpm install --frozen-lockfile
 
-FROM base AS builder
-COPY --from=installer /app .
-COPY --from=pruner /app/out/full/ .
-RUN cd packages/db && pnpm prisma generate
-RUN turbo run build --filter=ws-backend...
+RUN cd apps/ws-backend && pnpm build
 
-FROM node:20-alpine AS runtime
-WORKDIR /app
-RUN npm install -g pnpm
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/apps/ws-backend/dist ./dist
-COPY --from=builder /app/apps/ws-backend/package.json .
+
 ENV NODE_ENV=production
 EXPOSE 8080
+
+WORKDIR /app/apps/ws-backend
+
 CMD ["node", "dist/index.js"]
 
