--- a/apps/sketchxpad-frontend/Dockerfile
+++ b/apps/sketchxpad-frontend/Dockerfile
@@ -1,21 +1,22 @@
-FROM node:20-alpine AS base
+FROM node:20-alpine AS builder
 WORKDIR /app
 RUN npm install -g pnpm turbo
 
-FROM base AS pruner
-COPY . .
-RUN turbo prune --scope=sketchxpad-frontend --docker 
 
-FROM base AS installer
-COPY --from=pruner /app/out/json .
-COPY --from=pruner /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
+ARG VITE_HTTP_URL=http://localhost:3000
+ARG VITE_WS_URL=ws://localhost:8080
+ENV VITE_HTTP_URL=$VITE_HTTP_URL
+ENV VITE_WS_URL=$VITE_WS_URL
+
+COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
+COPY turbo.json ./
+
+COPY packages ./packages
+COPY apps/sketchxpad-frontend ./apps/sketchxpad-frontend
+
 RUN pnpm install --frozen-lockfile
 
-FROM base AS builder
-COPY --from=installer /app . 
-COPY --from=pruner /app/out/full/ .
-RUN turbo run build --filter=sketchxpad-frontend...
-
+RUN cd apps/sketchxpad-frontend && pnpm build
 
 FROM nginx:alpine AS runtime
 COPY --from=builder /app/apps/sketchxpad-frontend/dist /usr/share/nginx/html
