--- a/infrastructure/k8s/secrets.yaml.example
+++ b/infrastructure/k8s/secrets.yaml.example
@@ -5,5 +5,5 @@ metadata:
 kind: Secret
 type: Opaque
 stringData:
-  DATABASE_URL: "postgresql://neondb_owner:npg_K62zqCSBGLcm@ep-wandering-glade-ae7vz0ij-pooler.c-2.us-east-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
-  JWT_SECRET: "lxWoPYNRCQ6PYU2cwZ04"
+  DATABASE_URL: "Database_url"
+  JWT_SECRET: "JWT_SECRET"
