--- a/infrastructure/k8s/http-backend.yaml
+++ b/infrastructure/k8s/http-backend.yaml
@@ -46,10 +46,10 @@ metadata:
   labels:
     app: http-backend
 spec:
+  ports:
+  - port: 3000
+    protocol: TCP
+    targetPort: 3000
   selector:
     app: http-backend
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 3000
   type: ClusterIP
