--- a/infrastructure/k8s/ingress.yaml
+++ b/infrastructure/k8s/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: sketchxpad-ingress
   namespace: sketchxpad
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/websocket-services: "ws-backend"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
@@ -14,24 +14,24 @@ spec:
     - host: sketchxpad.local
       http:
         paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: frontend
-                port:
-                  number: 80
-          - path: /api
-            pathType: Prefix
+          - path: /api(/|$)(.*)
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: http-backend
                 port:
                   number: 3000
-          - path: /ws
-            pathType: Prefix
+          - path: /ws(/|$)(.*)
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: ws-backend
                 port:
                   number: 8080
+          - path: /()(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: frontend
+                port:
+                  number: 80
