--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "packageManager": "pnpm@10.0.0",
   "engines": {
     "node": ">=18"
-  }
+  },
+  "extends": "@repo/typescript-config/base.json",
+  "compilerOptions": {
+    "types": ["node"],
+    "outDir": "./dist",
+    "rootDir": "./src"
+  },
+  "include": ["src/**/*"]
 }
