--- a/packages/backend-common/package.json
+++ b/packages/backend-common/package.json
@@ -11,7 +11,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vite": "^7.0.4"
   },
   "exports": {
     ".": {
